# text-utils

./: .flake8  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
data/de/: de_100k.txt  de_128_char.txt  de_char_100k.txt  de_char_256.txt
data/en/: bpe_8192_3.merges  bpe_8192_5.merges  en_100k.txt  en_128_char.txt  en_char_100k.txt  en_char_256.txt
data/en/misspellings/: dev_misspellings.json  test_misspellings.json
data/en/misspellings_no_neuspell_no_bea/: dev_misspellings.json  test_misspellings.json
data/es/: es_100k.txt  es_128_char.txt  es_char_100k.txt  es_char_256.txt
data/fr/: fr_100k.txt  fr_128_char.txt  fr_char_100k.txt  fr_char_256.txt
data/it/: it_100k.txt  it_128_char.txt  it_char_100k.txt  it_char_256.txt
data/multi/: bpe_multi_16384_3.merges
data/pt/: pt_100k.txt  pt_128_char.txt  pt_char_100k.txt  pt_char_256.txt
python/scripts/: evaluate.py  zip_experiment.py
python/text_correction_utils/: __init__.py  configuration.py  distributed.py  hook.py  io.py  logging.py  mask.py  tensorboard.py  text.py  tokenization.py  whitespace.py
python/text_correction_utils/api/: __init__.py  cli.py  corrector.py  server.py  table.py  trainer.py  utils.py
python/text_correction_utils/cli/: create_dictionary.py  dictionary.py  evaluate.py  train_bpe.py  zip_experiment.py
python/text_correction_utils/configuration/: __init__.py  base.py  tokenizer.py
python/text_correction_utils/inference/: __init__.py
python/text_correction_utils/modules/: decoder.py  embedding.py  encoder.py  grouping.py  head.py  loss.py  lr_scheduler.py  moe.py  optimizer.py  scheduler.py
python/text_correction_utils/text/: __init__.py
python/text_correction_utils/tokenization/: __init__.py  base.py  byte.py  char.py  constants.py
python/text_utils/: __init__.py  configuration.py  constraints.py  distributed.py  io.py  logging.py  tensorboard.py
python/text_utils/api/: __init__.py  cli.py  processor.py  server.py  table.py  trainer.py  utils.py
python/text_utils/cli/: create_continuation_index.py  create_dictionary.py  train_bpe.py
python/text_utils/inference/: __init__.py  utils.py
python/text_utils/modules/: decoder.py  embedding.py  encoder.py  grouping.py  head.py  loss.py  moe.py  optimizer.py  utils.py
resources/test/: bad_dict.txt  good_dict.txt  multi30k.bpe.merges  multi30k.jsonl  multi30k_rev.jsonl  multi30k_rev.txt  prefix_vec.json  test_config.yaml
resources/test/sub_dir/: sub_config.yaml
scripts/: benchmark_tries.py  create_prefix_vec.py  train.sh  wikidump_to_txt.py
src/: constraints.rs  continuations.rs  corrupt.rs  data.rs  dictionary.rs  edit.rs  edit_distance.rs  grammar.rs  inference.rs  lib.rs  metrics.rs  prefix.rs  prefix_tree.rs  prefix_vec.rs  text.rs  tokenization.rs  unicode.rs  utils.rs  whitespace.rs  windows.rs
src/data/: labeling.rs  loading.rs  mod.rs  postprocessing.rs  preprocessing.rs  task.rs  utils.rs
text-utils-constraints/: Cargo.toml
text-utils-constraints/benches/: benchmark.rs
text-utils-constraints/resources/test/: json.txt  rdf_triples.txt  template.txt
text-utils-constraints/src/: lib.rs  re.rs  utils.rs
text-utils-grammar/: Cargo.toml  index.html  test.py
text-utils-grammar/benches/: benchmark.rs
text-utils-grammar/grammars/calc/: calc.l  calc.y
text-utils-grammar/grammars/json/: JSON.g4  json.l  json.y
text-utils-grammar/grammars/json/constraint/: glossary.txt  numbers.txt
text-utils-grammar/grammars/sparql/: sparql.l  sparql.y  sparql_simple.y
text-utils-grammar/grammars/sparql/constraint/: 1.txt  2.txt  3.txt
text-utils-grammar/grammars/sparql/examples/: qlever1.rq  qlever3.rq  simple.rq
text-utils-grammar/grammars/test/: test.l  test.y
text-utils-grammar/pkg/: package.json  text_utils_grammar.d.ts  text_utils_grammar.js  text_utils_grammar_bg.wasm  text_utils_grammar_bg.wasm.d.ts
text-utils-grammar/resources/test/: continuations.json  json.txt  rdf_triples.txt  template.txt
text-utils-grammar/src/: lib.rs  lr1.rs  lrk.rs  re.rs  utils.rs
text-utils-prefix/: Cargo.toml
text-utils-prefix/benches/: benchmark.rs
text-utils-prefix/resources/test/: index.100k.txt  test.tsv
text-utils-prefix/src/: adaptive_radix_trie.rs  art.rs  lib.rs  patricia.rs  patricia_trie.rs  trie.rs  utils.rs  vec.rs
