[package]
publish = false
name = "text-utils"
version = "0.6.0"
edition = "2021"

[lib]
name = "text_utils"
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
rayon = "1.8"
indicatif = { version = "0.17", features = ["rayon"] }
pyo3 = { version = "0.22", features = ["anyhow", "extension-module", "abi3-py310", "auto-initialize"]}
pyo3-log = "0.11"
itertools = "0.13"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
regex = "1.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
rmp-serde = "1"
unicode-segmentation = "1.10"
unicode-normalization = "0.1"
num = "0.4"
anyhow = "1.0"
num_cpus = "1.14"
numpy = "0.22"
clap = { version = "4", features = ["derive"] }
tokenizers = "0.21"
lru = "0.12"

[dev-dependencies]
criterion = "0.5"

[features]
benchmark-utils = []

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bench]]
required-features = ["benchmark-utils"]
name = "benchmark"
harness = false
