[project]
name = "text_correction_utils"
description = "Utilities for text correction tasks using Deep NLP"
version = "0.1.4"
authors = [
    { name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

keywords = ["nlp", "utilities", "text", "correction"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

dependencies = [
    "torch>=2.0",
    "einops>=0.6.0",
    "numpy>=1.19.0,<1.23.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
    "tensorboard>=2.10.0",
    "flask>=2.2.0",
    "requests>=2.20.0",
    "termcolor>=2.2.0"
]

[project.scripts]
"tcu.zip_experiment" = "text_correction_utils.cli.zip_experiment:main"
"tcu.create_dictionary" = "text_correction_utils.cli.create_dictionary:main"
"tcu.train_bpe" = "text_correction_utils.cli.train_bpe:main"

[project.optional-dependencies]
test = [
    "pytest>=6.2.0"
]
8bit = [
    "bitsandbytes>=0.37",
]
optimizers = [
    "Sophia-Optimizer>=0.2.0"
]

[project.urls]
Github = "https://github.com/ad-freiburg/text-correction-utils"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "text_correction_utils._internal"
