[project]
name = "dtpu"
description = "Utilities for text processing tasks with Deep NLP"
version = "0.5.0"
authors = [
    { name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

keywords = ["nlp", "utilities", "text", "processing"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

dependencies = [
    "torch>=2.2",
    "einops>=0.7.0",
    "numpy>=1.26.0",
    "peft>=0.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
    "tensorboard>=2.16.0",
    "flask>=2.2.0",
    "requests>=2.30.0",
    "termcolor>=2.4.0"
]

[project.scripts]
"tu.create_continuation_index" = "text_utils.cli.create_continuation_index:main"
"tu.create_dictionary" = "text_utils.cli.create_dictionary:main"
"tu.train_bpe" = "text_utils.cli.train_bpe:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0"
]
low-precision = [
    "bitsandbytes>=0.42",
]

[project.urls]
Github = "https://github.com/ad-freiburg/text-utils"

[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "text_utils._internal"
