[project]
name = "dtpu"
description = "Utilities for text processing tasks with Deep NLP"
version = "0.6.2"
authors = [
    { name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = ["nlp", "utilities", "text", "processing"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

dependencies = [
    "torch>=2.3",
    "einops>=0.8",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "tensorboard>=2.16",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "requests>=2.31",
    "termcolor>=2.4",
    "grammar-utils>=0.1"
]

[project.scripts]
"tu.create_dictionary" = "text_utils.cli.create_dictionary:main"
"tu.train_bpe" = "text_utils.cli.train_bpe:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0"
]
low-precision = [
    "bitsandbytes>=0.42",
]

[project.urls]
Github = "https://github.com/ad-freiburg/text-utils"

[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "text_utils._internal"
