[package]
name = "text-utils-grammar"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
regex-automata = "0.4"
itertools = "0.12"
rayon = "1.8"
cfgrammar = { version = "0.13.4", features = ["serde"] }
lrtable = { version = "0.13.4", features = ["serde"] }
lrlex = "0.13.4"
lrpar = { version = "0.13.4", features = ["serde"] }
getopts = "0.2"

[dev-dependencies]
criterion = "0.5"
serde = "1.0"
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "benchmark"
harness = false
