[package]
name = "text-utils-grammar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
regex = "1.10"
regex-automata = "0.4"
itertools = "0.13"
cfgrammar = { version = "0.13.4", features = ["serde"] }
lrtable = { version = "0.13.4", features = ["serde"] }
lrlex = "0.13.4"
lrpar = { version = "0.13.4", features = ["serde"] }
indexmap = "2.2"
clap = { version = "4", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "benchmark"
harness = false
