[package]
name = "text-utils-prefix"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13"
odht = "0.3"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.6"
rmp-serde = "1.3"
memory-stats = "1.1"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
art-tree = "0.2.0"
patricia_tree = "0.8.0"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "benchmark"
harness = false
